# price_impact_optimal_execution

./: .gitignore  _build_artifacts.py  _rerun_backtests.py  final_pipeline.ipynb  final_report.tex  pyproject.toml  slides.tex
experiments/: grid_search_afs.py  np_rerun.py  np_rerun_canonical.py
results/: afs_grid.csv  afs_grid_pivot.csv  afs_grid_summary.csv  np_headline.csv  np_stress.csv  np_summary_afs.csv  np_summary_ow.csv
results/canonical_run/: np_headline.csv  np_stress.csv  np_summary_afs.csv  np_summary_ow.csv
saved/afs_daily/: config.json  daily_pnl.csv  metrics.csv  stock_day_pnl.csv  tca_stock_day.csv  tca_summary.csv
saved/afs_daily_high/: config.json  daily_pnl.csv  metrics.csv  stock_day_pnl.csv  tca_stock_day.csv  tca_summary.csv
saved/afs_multi/: config.json  daily_pnl.csv  metrics.csv  stock_day_pnl.csv  tca_stock_day.csv  tca_summary.csv
saved/afs_pi_linear_strat_daily/: config.json  daily_pnl.csv  metrics.csv  stock_day_pnl.csv  tca_stock_day.csv  tca_summary.csv
saved/afs_pi_linear_strat_multi/: config.json  daily_pnl.csv  metrics.csv  stock_day_pnl.csv  tca_stock_day.csv  tca_summary.csv
saved/ow_daily/: config.json  daily_pnl.csv  metrics.csv  stock_day_pnl.csv  tca_stock_day.csv  tca_summary.csv
saved/ow_daily_high/: config.json  daily_pnl.csv  metrics.csv  stock_day_pnl.csv  tca_stock_day.csv  tca_summary.csv
saved/ow_multi/: config.json  daily_pnl.csv  metrics.csv  stock_day_pnl.csv  tca_stock_day.csv  tca_summary.csv
saved/sens_H_120/: config.json  (+5 more)
tables/: headline_metrics.tex  sensitivity.tex  tca_summary.tex
(+39 files in other folders)
