[project]
name = "price-impact-optimal-execution"
version = "0.1.0"
description = ""
authors = [
    {name = "chrisdybdahl",email = "chrisdybdahl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.0,<2.3)",
    "scipy (>=1.14,<1.16)",
    "matplotlib (>=3.8,<4.0)",
    "pandas(>=2.2,<3.0)",
    "ipykernel (>=6.29,<7.0)"
]

[tool.poetry]
packages = [
    { include = "price_impact", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
